# lab03-il3ktra

./: CMakeLists.txt  README.md  axes.cpp  axes.h  glrenderer.cpp  glrenderer.h  gridlines.h  main.cpp  mainwindow.cpp  mainwindow.h  transforms.cpp  transforms.h
Resources/Shaders/: arrow.vert  axes.frag  axes.vert
resources/shaders/: grid.frag  grid.vert
src/: axes.cpp  axes.h  glrenderer.cpp  glrenderer.h  gridlines.cpp  gridlines.h  main.cpp  mainwindow.cpp  mainwindow.h  shaderloader.h  transforms.cpp  transforms.h
